--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 BarcodeExample/bin/
 BarcodeExample/obj/
+conholdate-cloud-guide-scripts/
+.vs/
+deploy.yaml
+devcon.exe
+k8s.barcode.bat
+local.barcode.bat
