--- a/BarcodeExample/BarcodeExample.csproj
+++ b/BarcodeExample/BarcodeExample.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Card.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Card.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Aspose.BarCode-Cloud" Version="19.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
